cmake_minimum_required(VERSION 3.10)
project(dbustest)

set(CMAKE_CXX_STANDARD 14)
add_subdirectory(pubsub_libdbus)

#find_package(PkgConfig)
#if (PKG_CONFIG_FOUND)
#    pkg_check_modules(DBUS "dbus-1")
#    if (DBUS_FOUND)
#        add_executable(publisher publisher.cpp)
#        target_link_libraries(publisher ${DBUS_LIBRARIES})
#        add_definitions(${DBUS_CFLAGS} ${DBUS_CFLAGS_OTHER})
#    endif()
#endif()
#
#find_package(PkgConfig)
#if (PKG_CONFIG_FOUND)
#    pkg_check_modules(DBUS "dbus-1")
#    if (DBUS_FOUND)
#        add_executable(consumer consumer.cpp)
#        target_link_libraries(consumer ${DBUS_LIBRARIES})
#        add_definitions(${DBUS_CFLAGS} ${DBUS_CFLAGS_OTHER})
#    endif()
#endif()
